--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^7.1.0",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
